# Eagle-Eye

./: .gitignore  pyproject.toml
eagle_eye/: find_point.py  homgraphy.py  homography.py  main.py  player_tracking.py  sort.py
eagle_eye/computer_vision/: find_point.py  homo_stitch.py  homography.py  sample.py  sort.py  stitching.py
eagle_eye/data_collector/: data_collector.py
eagle_eye/video_creator/: birdview_video.py
result/: aaa.avi
result/datas/: sample1.json  sample2.json
result/videos/: SORT_tracking.avi  player.avi  sample1.avi  sample2.avi  sample5.avi
tests/: test_eagle_eye.py
