[tool.poetry]
name = "Eagle-Eye"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.22.2"
argparse = "^1.4.0"
imutils = "^0.5.4"
opencv-contrib-python = "^4.5.5"
opencv-python = "^4.5.5"
filterpy = "^1.4.5"
scikit-image = "^0.19.2"
lap = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
